--- a/main.css
+++ b/main.css
@@ -8,27 +8,11 @@ body {
     color: #f4f4f4;
     background-color: white;
 }
+ 
 header {
     width: 100%;
-    height: 80vh;
-    background-color: #f0f3f4;  
-}
-
-section {
-    position: fixed;
-    width: 100%;
-    height: 10vh;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background-color: #3a3a3a;
-}
-
-div {
-    position: fixed;
-    width: 100%;
-    height: 50px;
+    height: 80px;
+    margin: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -37,10 +21,82 @@ div {
 }
 
 h1 {
-    font-size: 2.6em;
+    font-size: 2em;
     text-align: center;
 }
 
-footer {
+.container {
+    width: 80%;
+    height: auto;
+    margin: auto;
+    margin-top: 2%;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: white;;
+}
 
+.container-content {
+    width: 50%;
+    height: 300px;
+    overflow-y: scroll;
+    margin: 1%;
+    border-radius: 1%;
+    box-shadow: 1px 1px 5px 1px #3a3a3a73;    
+    padding: 460px 2% 2% 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    background-color: #f4f4f4;
+}
+
+h2 {
+    font-size: 1.6em;
+    line-height: 18px;
+    position: relative;
+    color: #3a3a3a;
+    margin-left: 2%;
+}
+
+a {
+    text-decoration: none;
+    font-size: 1.2em;
+    line-height: 14px;
+    padding: 4%;
+    margin: 1%;
+    border-radius: 3%;
+    color: #3a3a3a;
+    width: auto;
+    height: auto;
+    background-color: white;
+}
+
+a:hover {
+    background-color: #3a3a3a;
+    color: white;
+    transition: 1000ms;
+    -moz-transition: 1000ms;
+}
+
+footer {
+    width: 90%;
+    height: 100px;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    border-top: 1px solid #CCCCCC;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+}
+
+img {
+    width: 50%;
+    height: auto;
 }
